--- a/meu_perfil/index.html
+++ b/meu_perfil/index.html
@@ -56,7 +56,7 @@
     <footer>
         
         <div>
-            <a href="https://www.linkedin.com/in/ze-nildo-pereira-a64202212/"><img class="icones" src="assets/img/linkedin.png" alt="logo linkedin"></a>
+            <a href="https://www.linkedin.com/in/ze-nildo-pereira-a64202212/"><img class="icones" src="assets/img/linkedin2.png" alt="logo linkedin"></a>
             <a href="https://github.com/xnildo"><img class="icones" src="assets/img/github.png" alt="logo github"></a>
             <a href="https://www.instagram.com/xznildo"><img class="icones" src="assets/img/instagram.png" alt="logo instagram"></a>
         </div>
